@@ -434,9 +434,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.13</version>
                 <configuration>
-                    <argLine>-Xms1024m -Xmx2048m</argLine>
+                    <argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=512m</argLine>
                     <disableXmlReport>false</disableXmlReport>
-                    <redirectTestOutputToFile>false</redirectTestOutputToFile>
+                    <redirectTestOutputToFile>false</redirectTestOutputToFile> 
                 </configuration>
             </plugin>
             <plugin>
